found and fixed bug for whitespace validation on tweet form

--- a/public/styles/new-tweet.css
+++ b/public/styles/new-tweet.css
@@ -29,6 +29,8 @@ textarea {
   border: none;
   outline: none;
   resize: none;
+  overflow: hidden;
+  min-height: 100%;
   border-bottom: 0.2em solid #545149;
   font-size: 0.8em;
 }
